# DeepSeek-V4-Context-Benchmark

./: .env.example  .gitignore  ORCHESTRATOR_LOG.md  README.md  TESTING.md  main.py  pyproject.toml
plans/: plan.md
scripts/: generate_infographics.py  recompute_costs.py  render_charts.py
src/deepseek_v4_context_bench/: __init__.py  card.py  cli.py  client.py  config.py  report.py  runner.py  scorer.py  tokenizer.py
src/deepseek_v4_context_bench/corpora/: __init__.py  codebase.py  multihop.py  niah.py  synthesis.py
tests/: __init__.py  test_card.py  test_cli.py  test_client.py  test_config.py  test_corpora_codebase.py  test_corpora_multihop.py  test_corpora_niah.py  test_corpora_synthesis.py  test_integration.py  test_report.py  test_runner.py  test_scorer.py  test_tokenizer.py
