[project]
name = "deepseek-v4-context-bench"
version = "0.1.0"
description = "Production-ready 1M-token context benchmark for DeepSeek V4"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
dsv4ctx = "deepseek_v4_context_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepseek_v4_context_bench"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["results", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Long badge/URL lines are unavoidable in markdown strings

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=deepseek_v4_context_bench --cov-report=term-missing --cov-fail-under=85"
markers = [
    "integration: marks tests requiring OPENROUTER_API_KEY (skipped without env var)",
]
